; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3218.c_IS31FL3218_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3218.c_IS31FL3218_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISSI_REG_RESET = common dso_local global i64 0, align 8
@ISSI_REG_SHUTDOWN = common dso_local global i64 0, align 8
@ISSI_REG_PWM = common dso_local global i64 0, align 8
@ISSI_REG_CONTROL = common dso_local global i64 0, align 8
@ISSI_REG_UPDATE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IS31FL3218_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @ISSI_REG_RESET, align 8
  %4 = call i32 @IS31FL3218_write_register(i64 %3, i32 0)
  %5 = load i64, i64* @ISSI_REG_SHUTDOWN, align 8
  %6 = call i32 @IS31FL3218_write_register(i64 %5, i32 1)
  store i32 0, i32* %1, align 4
  br label %7

7:                                                ; preds = %16, %0
  %8 = load i32, i32* %1, align 4
  %9 = icmp slt i32 %8, 18
  br i1 %9, label %10, label %19

10:                                               ; preds = %7
  %11 = load i64, i64* @ISSI_REG_PWM, align 8
  %12 = load i32, i32* %1, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %11, %13
  %15 = call i32 @IS31FL3218_write_register(i64 %14, i32 0)
  br label %16

16:                                               ; preds = %10
  %17 = load i32, i32* %1, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %1, align 4
  br label %7

19:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %29, %19
  %21 = load i32, i32* %2, align 4
  %22 = icmp slt i32 %21, 3
  br i1 %22, label %23, label %32

23:                                               ; preds = %20
  %24 = load i64, i64* @ISSI_REG_CONTROL, align 8
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %24, %26
  %28 = call i32 @IS31FL3218_write_register(i64 %27, i32 63)
  br label %29

29:                                               ; preds = %23
  %30 = load i32, i32* %2, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %2, align 4
  br label %20

32:                                               ; preds = %20
  %33 = load i64, i64* @ISSI_REG_UPDATE, align 8
  %34 = call i32 @IS31FL3218_write_register(i64 %33, i32 1)
  ret void
}

declare dso_local i32 @IS31FL3218_write_register(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
